# omni

./: .dockerignore  .env.example  CHANGELOG.md  Caddyfile  Cargo.toml  docker-compose.dev.yml  docker-compose.yml
connectors/atlassian/: Dockerfile
connectors/google/: Dockerfile
connectors/slack/: Dockerfile
scripts/: start.sh
services/ai/: .gitignore  Dockerfile  main.py  requirements.txt
services/api-gateway/: Cargo.toml  Dockerfile  PLAN.md
services/api-gateway/src/: config.rs  main.rs  middleware.rs  proxy.rs
services/api-gateway/src/handlers/: admin.rs  ai.rs  auth.rs  documents.rs  health.rs  mod.rs  search.rs
services/indexer/: .env.test  Cargo.toml  Dockerfile  run-tests.sh
services/indexer/src/: error.rs  events.rs  lib.rs  main.rs  processor.rs
services/indexer/tests/: README.md  TESTING_GUIDE.md  api_integration_test.rs  event_processor_test.rs  full_flow_test.rs
services/indexer/tests/common/: mod.rs
services/searcher/: Cargo.toml  Dockerfile
services/searcher/src/: handlers.rs  lib.rs  main.rs  models.rs  search.rs
services/searcher/tests/: integration_tests.rs  search_test.rs  unit_test.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  test_utils.rs
shared/src/clients/: ai.rs
shared/src/db/repositories/: document.rs  embedding.rs  source.rs
web/: Dockerfile  Dockerfile.dev  package.json
